--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,18 @@ dependencies:
   get: ^4.7.2
   carousel_slider: ^5.0.0
   dotted_border: ^2.1.0
-  calendar_agenda:
+  intl: ^0.19.0
+  flutter_datetime_picker: ^1.5.1
+  get_storage: ^2.1.1
+
+  json_annotation: ^4.9.0
+  firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.6
+  firebase_auth: ^5.5.2
+  firebase_database: ^11.3.5
+  firebase_storage: ^12.4.5
+  device_preview: ^1.2.0
+ # calendar_agenda:
 #    path: dev_lib/calendar_agenda
 #  calendar_slider: ^0.0.4
 
@@ -31,6 +42,8 @@ dev_dependencies:
 
 
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 
 flutter:
