--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,19 @@ dependencies:
   dotted_border: ^2.1.0
   intl: ^0.19.0
   flutter_datetime_picker: ^1.5.1
+ # firebase_app_check: ^0.2.1+3
+
+
+
   get_storage: ^2.1.1
 
   json_annotation: ^4.9.0
+
+
+
+
   firebase_core: ^3.13.0
+
   cloud_firestore: ^5.6.6
   firebase_auth: ^5.5.2
   firebase_database: ^11.3.5
