--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.7.2
+  pdf: ^3.10.1
+  path_provider: ^2.1.1
   carousel_slider: ^5.0.0
   dotted_border: ^2.1.0
   intl: ^0.19.0
